ProdIND/ProdPrograms/force-app/main/default/objects/ErrorLogEvent__e/fields/Error_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stacktrace__c</fullName>
    <label>Error Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>