ProdIND/ProdPrograms/force-app/main/default/objects/ErrorLogEvent__e/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>