ProdIND/ProdPrograms/force-app/main/default/objects/ErrorLogEvent__e/fields/Loan_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_ID__c</fullName>
    <label>Loan Application ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>