ProdIND/ProdPrograms/force-app/main/default/objects/ErrorLogEvent__e/fields/ProCredit_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>ProCredit_Deal_Id__c</fullName>
    <label>ProCredit Deal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>